style.css
:root{
  --color-primary: #EDF6F9;
  --color-secondary: #027BAB;
  --color-tertiary: #356E03;
  --color-quaternary: #5DD4DF;
  --color-quinary: #006D77;
  --color-black: #0F031B;
  --color-white: #F7F4FB;

  --gray-primary: #5C5C5E;
  --gray-secondary: #8C8C8C;
  --gray-tertiary: #BEBDBF;
  --gray-quaternary: #D9D9D9;
  --gray-quinary: #dbeaef;

  --shadow-color-secondary: #1C4F6C;
  --shadow-color-tertiary: #17702E;
  --shadow-color-quaternary: #387075;
  --shadow-color-quinary: #133D42;

  --tint-color-secondary: #93C1E3;
  --tint-color-tertiary: #B8F5B8;
  --tint-color-quaternary: #AEE8ED;
  --tint-color-quinary: #82ACB1;
}

/* Declarando a Work Sans */
@font-face {
  font-family: 'Work Sans';
  src: url('assets/fonts/WorkSans-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap; 
}

@font-face {
  font-family: 'Work Sans';
  src: url('assets/fonts/WorkSans-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* Declarando a Open Sans */
@font-face {
  font-family: 'Open Sans';
  src: url('assets/fonts/OpenSans-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}
body{
  font-family: "Open Sans", sans-serif;
  background-color: var(--color-primary);
}
h1, h2, h3, h4{
  font-family: "Work Sans", sans-serif;
}
h1{
  font-size: 2.5rem;
}
h2{
  font-size: 2rem;
}
h3{
  font-size: 1.2rem;
}
h4{
  font-size: 1rem;
}

.btn-primary{
  display: flex;
  background-color: var(--color-tertiary);
  align-items: center;
  gap: 8px;
  padding: 8px 24px;
  border-radius: 2rem;
  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.3);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  border: none;
  width: fit-content;
  text-transform: uppercase;
  color: white;
}
.btn-primary:hover{
  cursor: pointer;
  transform: translateY(-2px);

}
.btn-fixed{
  padding: 10px;
  margin: 2rem;
  position: fixed;
  bottom: 0;
  right: 0;
}
.toggle-primary, .toggle-secondary{
  padding: 1rem 24px;
  color: black;
  border-radius: 10px;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.toggle-primary:hover, .toggle-secondary:hover{
  cursor: pointer;
  transform: translateY(-2px);
}
.toggle-primary{
  background-color: var(--color-primary);
}
.toggle-secondary{
  background-color: var(--gray-quinary);
}
summary{
  font-weight: 600;
  padding: 4px 0;
}
a{
  text-decoration: none;
  color: var(--color-white);
  text-transform: uppercase;
}

header {
  display: flex;
  position: relative;
  box-sizing: border-box;
  padding: 1rem 2rem;
  justify-content: space-between;
  align-items: center;
  background-color: var(--color-white);
}
header > img{
  width: clamp(80px, 10vw, 150px);
}
.menu{
  display: none;
  border: none;
  cursor: pointer;
  background: transparent;
}
nav{
  display: flex;
  gap: 3rem;
  align-items: center;
}
ul{
  display: flex;
  gap: 3rem;
  list-style: none;
  align-items: center;
}
ul li a{
  text-decoration: none;
  color: var(--color-black);
  text-transform: uppercase;
}
ul li a:hover{
  color: var(--color-quinary);
}

#home{
  display: flex;
  align-items: center;
  padding: 3rem 4rem;
  background: radial-gradient(circle at bottom, var(--color-primary), var(--color-primary), var(--color-primary), var(--tint-color-secondary));
  gap: 8rem;
  width: 100%;
}
.home__texts{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 0 1rem;
}
.home__texts h1{
  color: var(--shadow-color-secondary);
}
.home__texts h2{
  font-size: 1.2rem;
}
.hero__img {
  width: 100%;           
  height: auto;         
  max-width: 500px;      
  aspect-ratio: 500 / 400; 
}
#servicos{
 background-color: var(--shadow-color-quinary); 
 box-sizing: border-box;
 padding: 2rem 2rem 3rem;
}
.servicos__cards{
  display: flex;
  flex-wrap: nowrap;
  box-sizing: border-box;
  margin-top: -4rem;
  gap: 2rem;
  justify-content: space-around;
  align-items: center;
  overflow-x: hidden;
}
.card{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  padding: 1rem;
  border-radius: 4px;
  background-color: var(--color-primary);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  box-shadow: 4px 6px 12px;
}

.card:hover{
  transform: translateY(-4px);
}
.escondido{
  display: none;
}

#resultados{
  box-sizing: border-box;
  padding: 5rem 4rem 1rem;
  width: 100%;
}
#resultados img{
  width: 450px;
  height: 350px;
  flex-shrink: 0;
  border-radius: 8px;
  object-fit: cover;
  scroll-snap-align: center;
}
.galeria-container{
  position: relative;
  width: 100%;
  margin: 0 auto;
}
.galeria{
  display: flex;
  padding: 2rem 0;
  gap: 1.5rem;
  scroll-behavior: smooth;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
}
.galeria::-webkit-scrollbar {
  display: none; 
}
.galeria img{
  cursor:pointer;
}
.arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background: rgba(0, 0, 0, 0.3);
  color: white;
  border: none;
  font-size: 2rem;
  padding: 10px 18px;
  cursor: pointer;
  z-index: 10;
  border-radius: 50%;
  transition: background 0.3s;
}
.arrow:hover { background: var(--color-primary); }
.arrow-left { left: 10px; }
.arrow-right { right: 10px; }

.descricao{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: start;
}
.descricao__list{
  display: flex;
  flex-direction: column;
  align-items: start;
  font-weight: 600;
  list-style: initial;
  gap: 0;
  list-style-position: inside;
}

#local{
  display: flex;
  flex-direction: column;
  background-color: var(--shadow-color-quinary);
  background-image: url('assets/img/sala.jpg');
  background-size: cover;
  background-blend-mode: multiply;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  color: white;
  padding: 4rem;
  gap: 2rem;
  width: 100%;
}
.texts-wrapper{
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  gap: 0.5rem;
}
.locais{
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: 4rem;
  width: 100%;
}
.map-img {
  filter: grayscale(95%) opacity(0.9); 
  transition: all 0.4s ease;
}

.map-img:hover {
  filter: grayscale(0%) opacity(1); 
  transform: scale(1.01); 
}
.locais__toggles{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 40%;
}
.locais__toggles p{
  font-size: small;
}
.locais__toggles span{
  font-weight: 600;
}

#contato{
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  padding: 4rem;
  gap: 2rem;
  width: 100%;
}
.faq{
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: 100%;
}
.faq__toggles{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
}
.infos{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: end;
  width: 60%;
}

footer{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem 4rem;
  background-color: var(--shadow-color-quinary);
  color: white;
}
.redes{
  display: flex;
  gap: 1rem;
}

/* MODAL */
.modal {
  display: none; 
  position: fixed;
  z-index: 1000; 
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); 
  backdrop-filter: blur(8px);           
  -webkit-backdrop-filter: blur(8px); 
  justify-content: center;   
  align-items: center;
}

.modal-conteudo {
  max-width: 90%;
  max-height: 80vh; 
  object-fit: contain;
  border-radius: 8px;
  animation: zoom 0.3s; 
}

@keyframes zoom {
  from {transform: scale(0)} 
  to {transform: scale(1)}
}

.fechar-modal {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  cursor: pointer;
}

/* TELAS MÉDIAS */

@media (max-width: 1080px){
  #home{
    padding: 5rem 3rem;
  }
  .servicos__cards{
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: center;
  }
  .card{
    width: 30%;
    padding: 0.875rem;
    text-align: center;
  }
  .card img{
    width: 100%;
    height: auto;
  }
  .card h4{
    font-size: 1rem;
  }
  .escondido{
    display: flex;
  }
}

/* MOBILE */

@media (max-width: 768px){
  h1{
    font-size: 2.2rem;
  }
  h2{
    font-size: 1.5rem;
  }
  h3{
    font-size: 1.25rem;
  }
  h4{
    font-size: 1rem;
  }
  .home__texts h2{
    font-size: 1.1rem;
    line-height: 1.4;
    font-weight: 500;
  }
  .menu{
    display: flex;
  }
  nav ul{
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: var(--color-primary);
    flex-direction: column;
    padding: 2rem 0;
    display: none;
    gap: 1rem;
    align-items: center;
    text-align: center;
    margin: 0;
    z-index: 10;
  }
  ul li{
    display: block;
    width: 100%;
    text-align: center;
  }
  ul.menu-aberto{
    display: flex;
  }
  #home{
    flex-direction: column;
    align-items: center;
    padding: 4rem 1rem;
    justify-content: center;
    gap: 3rem;
  }
  #servicos{
    gap: 1rem;
    padding: 2rem 1rem;
  }
  .servicos__cards{
    gap: 1rem;
  }
  .card{
    width: 45%;
    padding: 0.875rem;
    text-align: center;
  }
  .card img{
    width: 100%;
    height: auto;
  }
  .card h3{
    white-space: nowrap;
    overflow: hidden;      
    text-overflow: ellipsis; 
  }
  #resultados img{
    width: 90%;
    max-height: 230px;
    aspect-ratio: 4 / 3;
  }
  #resultados{
    padding: 2rem 1rem 0;
  }
  .galeria{
    gap: 0.875rem;
    padding: 1.5rem 0;
  }
  .arrow { 
    display: none; 
  }
  .descricao{
    text-align: center;
    align-items: center;
  }
  .descricao__list{
    font-weight: 500;
  }

  #local{
    padding: 2rem 2rem;
  }
  .locais{
    flex-direction: column;
  }
  .map-img{
    display: none;
  }
  .locais__toggles{
    width: 100%;
  }
  #contato{
    flex-direction: column;
    padding: 2rem 1rem;
  }
  #contato h2{
    text-align: center;
  }
  .infos{
    align-items: center;
    width: 100%;
  }
  footer{
    padding: 2rem 1rem;
    gap: 1rem;
    align-items: start;
    flex-direction: column;
  }
  .redes{
    gap: 0.5rem;
  }
  .redes a{
    justify-content: center;
  }
  .btn-fixed{
    padding: 8px 10px;
  }
  .btn-fixed img{
    width: 30px;
  }
}

